src-ken&y/objects/Inventory_Change__c.object
<CustomObject>
    <customHelpPage>HelpInventoryChange</customHelpPage>
    <description>Record of inventory changes,  counting of a part at a Location, movements</description>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Inventory Change</relationshipLabel>
        <relationshipName>Cycle_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Computer_Quantity__c</fullName>
        <description>Quantity at SubInventory and Lot</description>
        <inlineHelpText>The quantity at the sub-inventory and lot.</inlineHelpText>
        <label>Computer Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Quantity__c</fullName>
        <description>Quantity counted by cycle counter</description>
        <inlineHelpText>Quantity counted by cycle counter.</inlineHelpText>
        <label>Count Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Contract Currency</relationshipLabel>
        <relationshipName>Contract_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Inventory Change</relationshipLabel>
        <relationshipName>Inventory_Change</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <inlineHelpText>Indicates that the document has been finalized and is ready for accounting.</inlineHelpText>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ready for generating accounting entries</description>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Item</description>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Item__c.Non_Inventory__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Inventory Change</relationshipLabel>
        <relationshipName>Cycle_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Inventory Change</relationshipLabel>
        <relationshipName>Inventory_Change</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory Change / Cycle Count Reason Code.</description>
        <inlineHelpText>A valid reason code is required.</inlineHelpText>
        <label>Reason Code</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Reason_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Inventory Change</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Inventory Change</relationshipLabel>
        <relationshipName>Inventory_Change</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temporary_Value_Holder__c</fullName>
        <label>Temporary Value Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Lines__c</fullName>
        <label>Total Number of Lines</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency for this record.</description>
        <formula>Company__r.Default_Transaction_Currency__r.Name</formula>
        <inlineHelpText>To manage the default transaction currency, go to the Company page.</inlineHelpText>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Work Order Kit</fullName>
                </value>
                <value>
                    <fullName>Work Order DeKit</fullName>
                </value>
                <value>
                    <fullName>Work Order Scrap Components</fullName>
                </value>
                <value>
                    <fullName>Work Order Complete</fullName>
                </value>
                <value>
                    <fullName>Work Order Uncomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Inventory Change</relationshipLabel>
        <relationshipName>Inventory_Change</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Computer_Quantity__c</columns>
        <columns>Count_Quantity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Company__c</columns>
        <columns>Finalized__c</columns>
        <columns>Item__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Change</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>